Remove Let it snow.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -59659,6 +59659,7 @@
       }
     },
     "Let it snow" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
