Show who took a snapshot in Discord message.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -94115,6 +94115,9 @@
         }
       }
     },
+    "Snapshot taken by %@." : {
+
+    },
     "Snapshot uploaded to Discord" : {
       "localizations" : {
         "de" : {
