Estimated viewer delay. 8 seconds by default.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -43273,6 +43273,12 @@
         }
       }
     },
+    "Estimated viewer delay" : {
+
+    },
+    "Estimated viewer delay, for example used to make it easier to take snapshots using the chat bot. It does not delay the stream." : {
+
+    },
     "Events (alerts)" : {
       "localizations" : {
         "de" : {
