Remove keep speaker alive toggle.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -58901,6 +58901,7 @@
       }
     },
     "Keep speaker alive" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
