Watch remote control assistant toggle.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -89887,9 +89887,6 @@
         }
       }
     },
-    "Searching for your Tesla" : {
-
-    },
     "Select %@ if you want the DJI camera to stream to Moblin's RTMP server on this device. Select %@ to make the DJI camera stream to any destination." : {
       "localizations" : {
         "de" : {
@@ -108495,7 +108492,11 @@
         }
       }
     },
+    "The watch acts as remote control assistant when enabled. Please note that in this case, chat, skip current TTS and a few other features are not supported." : {
+
+    },
     "The watch acts as remote control assistant when the remote control streamer is connected. Please note that in this case, chat, skip current TTS and a few other features are not (yet) supported." : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
