Tesla vehicle continued.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -45655,6 +45655,9 @@
         }
       }
     },
+    "Failed to add key" : {
+
+    },
     "Failed to create stream marker" : {
       "localizations" : {
         "de" : {
