Fix suggestion crash?

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -39552,6 +39552,7 @@
       }
     },
     "Done" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
