Multi track continued, and more.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -68837,6 +68837,9 @@
         }
       }
     },
+    "Multi track" : {
+
+    },
     "Must be a number between 1 and 65535." : {
       "localizations" : {
         "de" : {
@@ -77948,6 +77951,9 @@
           }
         }
       }
+    },
+    "Platforms" : {
+
     },
     "Play" : {
       "localizations" : {
