Tesla vehicle continued.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -52430,6 +52430,12 @@
         }
       }
     },
+    "Get drive state" : {
+
+    },
+    "Get media state" : {
+
+    },
     "Gift subsciptions" : {
       "localizations" : {
         "de" : {
