Take snapshot with countdown.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -102936,6 +102936,9 @@
         }
       }
     },
+    "Taking snapshot in" : {
+
+    },
     "Tap screen to focus" : {
       "localizations" : {
         "de" : {
