Tesla settings rework.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -29666,6 +29666,9 @@
         }
       }
     },
+    "Configuration" : {
+
+    },
     "Configure it in Settings → Remote control" : {
       "localizations" : {
         "de" : {
