Mute and unmute chat bot commands.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -68336,6 +68336,9 @@
         }
       }
     },
+    "Muting audio" : {
+
+    },
     "My BRB scene" : {
       "localizations" : {
         "de" : {
@@ -113248,6 +113251,9 @@
           }
         }
       }
+    },
+    "Unmuting audio" : {
+
     },
     "Unsupported scheme %@" : {
       "localizations" : {
